src/renderers/md4x-html.h


#define MD_HTML_FLAG_DEBUG 0x0001
#define MD_HTML_FLAG_VERBATIM_ENTITIES 0x0002
#define MD_HTML_FLAG_SKIP_UTF8_BOM 0x0004
#define MD_HTML_FLAG_FULL_HTML 0x0008
#define MD_HTML_FLAG_HEAL 0x0100
    typedef struct MD_HTML_OPTS
    {
        const char *title;   
        const char *css_url; 
    } MD_HTML_OPTS;
    int md_html(const MD_CHAR *input, MD_SIZE input_size,
                void (*process_output)(const MD_CHAR *, MD_SIZE, void *),
                void *userdata, unsigned parser_flags, unsigned renderer_flags);
    int md_html_ex(const MD_CHAR *input, MD_SIZE input_size,
                   void (*process_output)(const MD_CHAR *, MD_SIZE, void *),
                   void *userdata, unsigned parser_flags, unsigned renderer_flags,
                   const MD_HTML_OPTS *opts);